--- a/ALaCarte/AndroidManifest.xml
+++ b/ALaCarte/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.NFC" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -26,7 +26,7 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-				
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
@@ -37,6 +37,10 @@
         </activity>
         <activity
             android:name="com.example.staggeredgridviewdemo.ViewMenuActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.example.staggeredgridviewdemo.ViewItemActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
